kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: incrementum
  labels:
    name: incrementum
