kubernetes/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incrementum-client
  namespace: incrementum
  labels:
    app: incrementum-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: incrementum-client
  template:
    metadata:
      labels:
        app: incrementum-client
    spec:
      containers:
      - name: incrementum-client
        image: nhowell02/incrementum_client:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
