kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: incrementum-ingress
  namespace: incrementum
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://incremy.duckdns.org"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, PATCH, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Accept,Accept-Language,Authorization,Content-Language,Content-Type,DNT,Origin,User-Agent,X-CSRFToken,X-Requested-With,X-User-Id,sortvalue,sortbool"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - incremy.duckdns.org
    - api.incremy.duckdns.org
    secretName: incrementum-tls
  rules:
  - host: incremy.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: incrementum-client-service
            port:
              number: 80
  - host: api.incremy.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: incrementum-api-service
            port:
              number: 80
